[gd_scene load_steps=3 format=3 uid="uid://d1lerhkjp727w"]

[ext_resource type="Texture2D" uid="uid://csidmtq3gi3s1" path="res://sprites/items/circuit.tres" id="1_jyf4r"]
[ext_resource type="Script" path="res://objects/ui/build_manager/factory_recipe_item.gd" id="2_jb18m"]

[node name="FactoryRecipeItem" type="TextureRect"]
texture = ExtResource("1_jyf4r")
script = ExtResource("2_jb18m")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
